# OpenCode-Volt

./: .gitignore  00-INDEX.md  99-Inbox.md  AGENTS.md  Architecture.md  DEVELOPMENT-ROADMAP.md  LICENSE  README.md  TASKS.md  VibeOS.md  index.md  log.md  opencode.json
.obsidian/: appearance.json  workspace.json
.opencode/agent/: librarian.md
.opencode/command/: ask.md  audit.md  capture.md  commit.md  distill-pipeline.md  inbox.md  project-add.md  project.md
.opencode/skills/capture/: SKILL.md
01-Reference/: agents.md  commands.md  config.md  global-config.md  memory.md  permissions.md  plugins.md  rules-AGENTS.md
02-Methods/: closed-loop.md  context-as-docs.md  distill-pattern.md  memory-management.md  model-routing.md  multi-agent-pipeline.md  tool-integration-pattern.md  verifier-pattern.md
03-Projects/: SERPlux.md  dotfiles.md  dv-hub.md  prod-monitor.md  rudra-ai.md  rudra-phone.md  vault.md
04-Memory/: active-context.md  facts.md  index.md  log.md
04-Memory/session-log/: 2026-06-27-part2.md  2026-06-27.md  2026-06-29.md  2026-06-30-part2.md  2026-06-30.md  2026-07-02-part2.md  2026-07-02-part3.md  2026-07-02.md  2026-07-03-part2.md  2026-07-03.md  2026-07-07.md  2026-07-08.md  2026-07-12.md
05-Templates/: README.md  archive-session-log.sh  method.md  pre-commit-check.sh  project-card.md
tools/telegram-capture/: .env.example  README.md  capture.py  captures_all.json  captures_batch.json  captures_classified.json  config.py  conftest.py  mark.py  pyproject.toml  test_capture.py  test_config.py  test_mark.py  test_smoke.py
